Added the patint creation and patient list API.
